endra for å se om jeg får kompila på netlify

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Kommunespillet Kommundle er et spill om kommunevåpen og geografi"
+      content="Kommunespillet Kommundle er et spill om kommunevåpen og geografi. Ditt yndlingskommunespill?"
     />
     <meta
       name="keywords"
