--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html lang="no">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌍</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Kommunespillet Kommundle er et spill om kommunevåpen og geografi. Ditt yndlingskommunespill?"
+      content="Wordle game in the World"
     />
-    <meta
-      name="keywords"
-      content="kommunevåpen, kommune, spill, våpenskjold, geografi"
-    />  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Kommundle</title>
+    <title>Worldle</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
