--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="keywords"
-      content="kommunevåpen, kommune, spill, våpenskjold, geografi"
+      content="kommunevåpen, kommune, spill, våpenskjold, geografi, kommunespill"
     /> 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
