--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,27 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+
+  <!-- Twitter cards -->
+  <meta name="twitter:site"    content="@kommundle"></meta>
+  <meta name="twitter:creator" content="@kommundle"></meta>
+  <meta name="twitter:title"   content="Kommundle - ditt yndlingskommunespill"></meta>
+  
+  <meta name="twitter:description" content="Spill Kommundle og gjett kommunen.">
+  
+  
+
+
+
+<meta name="twitter:card"  content="summary">
+<meta name="twitter:image" content="https://kommundle.no/public/logo512.png">
+
+
+
+
+<!-- end of Twitter cards -->
+
     <title>Kommundle</title>
   </head>
   <body>
