--- a/public/index.html
+++ b/public/index.html
@@ -31,21 +31,12 @@
 
 
   <!-- Twitter cards -->
-  <meta name="twitter:site"    content="@kommundle"></meta>
-  <meta name="twitter:creator" content="@kommundle"></meta>
-  <meta name="twitter:title"   content="Kommundle - ditt yndlingskommunespill"></meta>
-  
-  <meta name="twitter:description" content="Spill Kommundle og gjett kommunen.">
-  
-  
-
-
-
-<meta name="twitter:card"  content="summary">
-<meta name="twitter:image" content="https://kommundle.no/public/logo512.png">
-
-
-
+  <meta name="twitter:site"    content="@kommundle" />
+  <meta name="twitter:creator" content="@kommundle" />
+  <meta name="twitter:title"   content="Kommundle - ditt yndlingskommunespill" />
+  <meta name="twitter:description" content="Spill Kommundle og gjett kommunen." />
+  <meta name="twitter:card"  content="summary" />
+  <meta name="twitter:image" content="https://kommundle.no/logo512.png" />
 
 <!-- end of Twitter cards -->
 
