--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
   <meta name="twitter:description" content="Spill Kommundle og gjett kommunen." />
   <meta name="twitter:card"  content="summary" />
   <meta name="twitter:image" content="https://kommundle.no/logo512.png" />
+  <meta name="twitter:url" content="https://kommundle.no/" />
 
 <!-- end of Twitter cards -->
 
