--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   <meta name="twitter:description" content="Spill Kommundle og gjett kommunen." />
   <meta name="twitter:card"  content="summary_large_image" />
   <meta name="twitter:image" content="https://www.kommundle.no/logo512.png" />
-  <meta name="twitter:url" content="https://www.kommundle.no/" />
+  <meta name="twitter:url" content="{{ site.url }}" />
 
 <!-- end of Twitter cards -->
 
