Endra til rødt spørsmålstegn

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 <meta property="og:site_name" content="Kommundle">
 <meta property="og:locale" content="nb_NO">
 <meta property="og:title"   content="Kommundle">
-<meta property="og:url"   content="https://www.kommundle.no">
+<meta property="og:url"   content="{{ site.url }}">
 <meta property="og:description" content="Spill Kommundle og gjett kommunen.">
 <meta property="og:image" content="https://www.kommundle.no/logo512.png">
 <!-- end open graph -->
