--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   <meta name="twitter:title"   content="Kommundle - ditt yndlingskommunespill" />
   <meta name="twitter:description" content="Spill Kommundle og gjett kommunen." />
   <meta name="twitter:card"  content="summary_large_image" />
-  <meta name="twitter:image" content="https://www.kommundle.no/logo512.png" />
+  <!-- <meta name="twitter:image" content="https://www.kommundle.no/logo512.png" /> -->
   <meta name="twitter:url" content="{{ site.url }}" />
 
 <!-- end of Twitter cards -->
@@ -48,7 +48,7 @@
 <meta property="og:site_name" content="Kommundle">
 <meta property="og:locale" content="nb_NO">
 <meta property="og:title"   content="Kommundle">
-<meta property="og:url"   content="{{ site.url }}">
+<meta property="og:url"   content="{{ site.url }}" />
 <meta property="og:description" content="Spill Kommundle og gjett kommunen.">
 <meta property="og:image" content="https://www.kommundle.no/logo512.png">
 <!-- end open graph -->
