endret kommundle til artle noen steder

--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,9 @@
  
 <!-- Open Graph ---->
 <!-- <meta property="og:type" content="article">---->
-<meta property="og:site_name" content="Kommundle">
+<meta property="og:site_name" content="Artle">
 <meta property="og:locale" content="nb_NO">
-<meta property="og:title"   content="Kommundle">
+<meta property="og:title"   content="Artle">
 <meta property="og:url"   content="{{ site.url }}" />
 <meta property="og:description" content="Spill Kommundle og gjett kommunen.">
 <meta property="og:image" content="https://www.kommundle.no/logo512.png">
@@ -65,7 +65,7 @@
 
 
 
-    <title>Kommundle</title>
+    <title>Artle</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
