--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,12 @@
 
 
   <!-- Twitter cards -->
-  <meta name="twitter:site"    content="@kommundle" />
-  <meta name="twitter:creator" content="@kommundle" />
-  <meta name="twitter:title"   content="Kommundle - ditt yndlingskommunespill" />
-  <meta name="twitter:description" content="Spill Kommundle og gjett kommunen." />
+  <meta name="twitter:site"    content="@artle" />
+  <meta name="twitter:creator" content="@artle" />
+  <meta name="twitter:title"   content="Artle - Your daily art quiz" />
+  <meta name="twitter:description" content="Play Artle and guess the artist." />
   <meta name="twitter:card"  content="summary" />
-  <meta name="twitter:image" content="https://www.kommundle.no/logo512.png" />
+  <meta name="twitter:image" content="https://www.artle.eu/logo512.png" />
   <meta name="twitter:url" content="{{ site.url }}" />
 
 <!-- end of Twitter cards -->
