text changes and url changes

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Kommunespillet Kommundle er et spill om kommunevåpen og geografi."
+      content="Play Artle and guess the artist."
     />
     <meta
       name="keywords"
-      content="kommunevåpen, kommune, spill, våpenskjold, geografi, kommunespill"
+      content="art, paintings, games, artists, famous, worldle"
     /> 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -58,8 +58,8 @@
 <meta property="og:locale" content="nb_NO">
 <meta property="og:title"   content="Artle">
 <meta property="og:url"   content="{{ site.url }}" />
-<meta property="og:description" content="Spill Kommundle og gjett kommunen.">
-<meta property="og:image" content="https://www.kommundle.no/logo512.png">
+<meta property="og:description" content="Play Artle and guess the artist.">
+<meta property="og:image" content="https://www.artle.eu/logo512.png">
 <!-- end open graph -->
  
 
